# ifeval_ko

./: .gitignore  README.md  README_ko.md  main.py  pyproject.toml  runme.sh
ifeval_ko/: download_data.py  evaluation.py  instructions.py  instructions_registry.py  instructions_util.py  update_data.py
test/: instructions_test.py  instructions_util_test.py
